# GenAIForge

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  genai_forge_app_plan.md  todo.md
.claude/: settings.local.json
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_eval_runs.py  0003_add_api_keys.py
backend/app/: config.py  dependencies.py  main.py  middleware.py  worker.py
backend/app/agents/: checkpointer.py  code_review_agent.py  research_agent.py  state.py
backend/app/api/v1/: agents.py  eval.py  gateway.py  health.py  rag.py  router.py  workers.py
backend/app/core/: __init__.py  cache.py  embeddings.py  llm_clients.py  semantic_cache.py  tracing.py  vector_store.py
backend/app/models/: __init__.py  db.py  schemas.py
backend/app/observability/: metrics.py  otel.py
backend/app/rag/: __init__.py  evaluation.py  ingestion.py  pipeline.py  retrieval.py
backend/app/workers/: celery_app.py  crew_pipeline.py  tasks.py
backend/tests/: test_agents.py  test_core.py  test_eval.py  test_gateway.py  test_health.py  test_ingest.py  test_query.py
docs/: AI_RULES.md  README.md
docs/architecture/: api_standards.md  database_design.md  devops_deployment.md  system_design.md
docs/features/: api_gateway.md  multi_agent_board.md  observability_eval.md  rag_playground.md
frontend/: Dockerfile  package.json  tailwind.config.ts
infra/: docker-compose.yml
scripts/: seed_qdrant.py
(+43 files in other folders)
