[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genai-forge-backend"
version = "0.1.0"
description = "Backend services for GenAI Forge"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13,<2.0",
  "asyncpg>=0.29,<1.0",
  "celery[redis]>=5.4,<6.0",
  "cohere>=5.5,<6.0",
  "fastapi>=0.115,<1.0",
  "httpx>=0.27,<1.0",
  "langfuse>=2.38,<3.0",
  "llama-index-core>=0.11,<0.12",
  "llama-index-readers-file>=0.2,<0.3",
  "openai>=1.35,<2.0",
  "prometheus-client>=0.20,<1.0",
  "pydantic-settings>=2.3,<3.0",
  "python-multipart>=0.0.9,<1.0",
  "qdrant-client>=1.9,<2.0",
  "redis[hiredis]>=5.0,<6.0",
  "SQLAlchemy>=2.0,<3.0",
  "tenacity>=8.3,<9.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0",
  "pytest-asyncio>=0.23,<1.0",
  "pytest-cov>=5.0,<6.0",
  "ruff>=0.5,<1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
